# libgamegraphics

./: .gitignore  .travis.yml  Makefile.am  README  README.md  TODO  configure.ac  libgamegraphics.pc.in
doc/: Makefile.am  gamegfx.1  gameimg.xml  gametls.xml  libgamegraphics.doxygen
doc/doxygen/: api.doxygen  full.doxygen
examples/: Makefile.am  common.hpp  gamegfx.cpp  gameimg.cpp  gametls.cpp  hello.cpp  pngutil.hpp
include/camoto/: Makefile.am  gamegraphics.hpp
include/camoto/gamegraphics/: graphics.hpp  graphicstype.hpp  image-memory.hpp  image.hpp  imageconverter.hpp  imagetype.hpp  manager.hpp  palette.hpp  palettetable.hpp  suppitem.hpp  tileset-from_image_list.hpp  tileset.hpp  tilesetFromList.hpp  tilesettype.hpp  util.hpp
python/: Makefile.am  gamegraphics.i
src/: Makefile.am  baseimage.cpp  baseimage.hpp  basetileset.cpp  basetileset.hpp  conv-byteplanar.cpp  conv-byteplanar.hpp  filter-block-pad.cpp  filter-block-pad.hpp  filter-ccomic.cpp  filter-ccomic.hpp  filter-ccomic2.cpp  filter-ccomic2.hpp  filter-pad.cpp  filter-pad.hpp  filter-vinyl-tileset.cpp  filter-vinyl-tileset.hpp  graphics.cpp  image-from_tileset.cpp  image-from_tileset.hpp  image-memory.cpp  image-sub.cpp  image-sub.hpp  image.cpp  imageconverter.cpp  img-bash-sprite.cpp  img-bash-sprite.hpp  img-ccaves.cpp  img-ccaves.hpp  img-ccomic.cpp  img-ccomic.hpp  img-cga.cpp  img-cga.hpp  img-ddave.cpp  img-ddave.hpp  img-ega-backdrop.cpp  img-ega-backdrop.hpp  img-ega-byteplanar-tiled.cpp  img-ega-byteplanar-tiled.hpp  img-ega-byteplanar.cpp  (+126 more)
tests/: Makefile.am  test-archive.cpp  test-archive.hpp  test-conv-byteplanar.cpp  test-conv.hpp  test-filter-ccomic.cpp  test-filter-ccomic2.cpp  test-filter-pad.cpp  test-filter.cpp  test-filter.hpp  test-image-from_tileset.cpp  test-image.cpp  test-image.hpp  test-img-bash-sprite.cpp  test-img-ccaves.cpp  test-img-ccomic.cpp  test-img-ddave.cpp  test-img-defines.hpp  test-img-ega-backdrop.cpp  test-img-ega-byteplanar.cpp  test-img-ega-linear.cpp  test-img-ega-planar.cpp  test-img-ega-rowplanar.cpp  test-img-nukem2.cpp  test-img-pcx-1b4p.cpp  test-img-pcx-8b1p.cpp  test-img-pic-raptor.cpp  test-img-sw93beta-planar.cpp  test-img-tv-fog.cpp  test-img-vga-planar.cpp  test-img-vga.cpp  test-img-zone66_tile.cpp  test-img.hpp  test-pal-defaults.cpp  test-pal-vga-raw.cpp  test-pal-vga-raw8.cpp  test-subimage.cpp  test-tileset-from_image_list.cpp  test-tileset.cpp  test-tileset.hpp  (+24 more)
utils/: Makefile.am  dumpb800.cpp  dumppal.cpp
