lib_LTLIBRARIES = libgamegraphics.la

libgamegraphics_la_SOURCES = main.cpp
libgamegraphics_la_SOURCES += image.cpp
libgamegraphics_la_SOURCES += palettetable.cpp
libgamegraphics_la_SOURCES += tileset.cpp
libgamegraphics_la_SOURCES += tilesetFromList.cpp
libgamegraphics_la_SOURCES += img-ega-planar.cpp
libgamegraphics_la_SOURCES += img-ega-byteplanar.cpp
libgamegraphics_la_SOURCES += img-ega-rowplanar.cpp
libgamegraphics_la_SOURCES += img-vga.cpp
libgamegraphics_la_SOURCES += img-vga-raw.cpp
libgamegraphics_la_SOURCES += img-cga.cpp
libgamegraphics_la_SOURCES += img-tv-fog.cpp
libgamegraphics_la_SOURCES += img-zone66_tile.cpp
libgamegraphics_la_SOURCES += img-ddave.cpp
libgamegraphics_la_SOURCES += img-palette.cpp
libgamegraphics_la_SOURCES += img-pcx.cpp
libgamegraphics_la_SOURCES += pal-vga-raw.cpp
libgamegraphics_la_SOURCES += pal-gmf-harry.cpp
libgamegraphics_la_SOURCES += subimage.cpp
libgamegraphics_la_SOURCES += tileset-fat.cpp
libgamegraphics_la_SOURCES += tls-bash.cpp
libgamegraphics_la_SOURCES += tls-ccaves-sub.cpp
libgamegraphics_la_SOURCES += tls-ccaves-main.cpp
libgamegraphics_la_SOURCES += tls-ccomic.cpp
libgamegraphics_la_SOURCES += tls-cosmo.cpp
libgamegraphics_la_SOURCES += tls-ddave.cpp
libgamegraphics_la_SOURCES += tls-harry.cpp
libgamegraphics_la_SOURCES += tls-hocus.cpp
libgamegraphics_la_SOURCES += tls-img.cpp
libgamegraphics_la_SOURCES += tls-jill.cpp
libgamegraphics_la_SOURCES += tls-wacky.cpp
libgamegraphics_la_SOURCES += tls-wordresc.cpp
libgamegraphics_la_SOURCES += tls-wordresc-extra.cpp
libgamegraphics_la_SOURCES += tls-zone66.cpp

EXTRA_libgamegraphics_la_SOURCES = img-ega-common.hpp
EXTRA_libgamegraphics_la_SOURCES += img-ega-planar.hpp
EXTRA_libgamegraphics_la_SOURCES += img-ega-byteplanar.hpp
EXTRA_libgamegraphics_la_SOURCES += img-ega-rowplanar.hpp
EXTRA_libgamegraphics_la_SOURCES += img-vga.hpp
EXTRA_libgamegraphics_la_SOURCES += img-vga-raw.hpp
EXTRA_libgamegraphics_la_SOURCES += img-cga.hpp
EXTRA_libgamegraphics_la_SOURCES += img-tv-fog.hpp
EXTRA_libgamegraphics_la_SOURCES += img-zone66_tile.hpp
EXTRA_libgamegraphics_la_SOURCES += img-ddave.hpp
EXTRA_libgamegraphics_la_SOURCES += img-palette.hpp
EXTRA_libgamegraphics_la_SOURCES += img-pcx.hpp
EXTRA_libgamegraphics_la_SOURCES += pal-vga-raw.hpp
EXTRA_libgamegraphics_la_SOURCES += pal-gmf-harry.hpp
EXTRA_libgamegraphics_la_SOURCES += subimage.hpp
EXTRA_libgamegraphics_la_SOURCES += tileset-fat.hpp
EXTRA_libgamegraphics_la_SOURCES += tls-bash.hpp
EXTRA_libgamegraphics_la_SOURCES += tls-ccaves-sub.hpp
EXTRA_libgamegraphics_la_SOURCES += tls-ccaves-main.hpp
EXTRA_libgamegraphics_la_SOURCES += tls-ccomic.hpp
EXTRA_libgamegraphics_la_SOURCES += tls-cosmo.hpp
EXTRA_libgamegraphics_la_SOURCES += tls-ddave.hpp
EXTRA_libgamegraphics_la_SOURCES += tls-harry.hpp
EXTRA_libgamegraphics_la_SOURCES += tls-hocus.hpp
EXTRA_libgamegraphics_la_SOURCES += tls-img.hpp
EXTRA_libgamegraphics_la_SOURCES += tls-jill.hpp
EXTRA_libgamegraphics_la_SOURCES += tls-wacky.hpp
EXTRA_libgamegraphics_la_SOURCES += tls-wordresc.hpp
EXTRA_libgamegraphics_la_SOURCES += tls-wordresc-extra.hpp
EXTRA_libgamegraphics_la_SOURCES += tls-zone66.hpp

WARNINGS = -Wall -Wextra -Wno-unused-parameter

AM_CPPFLAGS  = $(BOOST_CPPFLAGS)
AM_CPPFLAGS += -I $(top_srcdir)/include
AM_CPPFLAGS += $(libgamecommon_CPPFLAGS)
AM_CPPFLAGS += $(WARNINGS)

AM_CXXFLAGS  = $(DEBUG_CXXFLAGS)
AM_CXXFLAGS += $(libgamecommon_CFLAGS)

libgamegraphics_la_LDFLAGS  = $(AM_LDFLAGS)
libgamegraphics_la_LDFLAGS += -version-info 0:0:0

libgamegraphics_la_LIBADD  = $(BOOST_SYSTEM_LIBS)
libgamegraphics_la_LIBADD += $(libgamecommon_LIBS)
