lib_LTLIBRARIES = libgamegraphics.la

libgamegraphics_la_SOURCES  = main.cpp
libgamegraphics_la_SOURCES += filter-block-pad.cpp
libgamegraphics_la_SOURCES += filter-ccomic.cpp
libgamegraphics_la_SOURCES += filter-ccomic2.cpp
libgamegraphics_la_SOURCES += image.cpp
libgamegraphics_la_SOURCES += image-from_tileset.cpp
libgamegraphics_la_SOURCES += image-sub.cpp
libgamegraphics_la_SOURCES += img-bash-sprite.cpp
libgamegraphics_la_SOURCES += img-ega.cpp
libgamegraphics_la_SOURCES += img-ega-backdrop.cpp
libgamegraphics_la_SOURCES += img-ega-byteplanar.cpp
libgamegraphics_la_SOURCES += img-ega-byteplanar-tiled.cpp
libgamegraphics_la_SOURCES += img-ega-linear.cpp
libgamegraphics_la_SOURCES += img-ega-planar.cpp
libgamegraphics_la_SOURCES += img-ega-rowplanar.cpp
libgamegraphics_la_SOURCES += img-mono.cpp
libgamegraphics_la_SOURCES += img-vga.cpp
libgamegraphics_la_SOURCES += img-vga-planar.cpp
libgamegraphics_la_SOURCES += img-vga-raw.cpp
libgamegraphics_la_SOURCES += img-vga-raw-planar.cpp
libgamegraphics_la_SOURCES += img-ccomic.cpp
libgamegraphics_la_SOURCES += img-ddave.cpp
libgamegraphics_la_SOURCES += img-nukem2.cpp
libgamegraphics_la_SOURCES += img-palette.cpp
libgamegraphics_la_SOURCES += img-pcx.cpp
libgamegraphics_la_SOURCES += img-pic-raptor.cpp
libgamegraphics_la_SOURCES += img-scr-vinyl.cpp
libgamegraphics_la_SOURCES += img-tv-fog.cpp
libgamegraphics_la_SOURCES += img-zone66_tile.cpp
libgamegraphics_la_SOURCES += palette.cpp
libgamegraphics_la_SOURCES += pal-vga-raw.cpp
libgamegraphics_la_SOURCES += pal-gmf-harry.cpp
libgamegraphics_la_SOURCES += tileset.cpp
libgamegraphics_la_SOURCES += tileset-fat.cpp
libgamegraphics_la_SOURCES += tileset-fat-fixed_tile_size.cpp
libgamegraphics_la_SOURCES += tileset-from_image_list.cpp
libgamegraphics_la_SOURCES += tls-actrinfo.cpp
libgamegraphics_la_SOURCES += tls-bash.cpp
libgamegraphics_la_SOURCES += tls-bash-sprite.cpp
libgamegraphics_la_SOURCES += tls-catacomb.cpp
libgamegraphics_la_SOURCES += tls-ccaves-sub.cpp
libgamegraphics_la_SOURCES += tls-ccaves-main.cpp
libgamegraphics_la_SOURCES += tls-ccomic.cpp
libgamegraphics_la_SOURCES += tls-ccomic2.cpp
libgamegraphics_la_SOURCES += tls-cosmo.cpp
libgamegraphics_la_SOURCES += tls-ddave.cpp
libgamegraphics_la_SOURCES += tls-ega-apogee.cpp
libgamegraphics_la_SOURCES += tls-got.cpp
libgamegraphics_la_SOURCES += tls-harry-chr.cpp
libgamegraphics_la_SOURCES += tls-harry-hsb.cpp
libgamegraphics_la_SOURCES += tls-harry-ico.cpp
libgamegraphics_la_SOURCES += tls-hocus.cpp
libgamegraphics_la_SOURCES += tls-jill.cpp
libgamegraphics_la_SOURCES += tls-sagent.cpp
libgamegraphics_la_SOURCES += tls-stryker.cpp
libgamegraphics_la_SOURCES += tls-vinyl.cpp
libgamegraphics_la_SOURCES += tls-wacky.cpp
libgamegraphics_la_SOURCES += tls-wordresc.cpp
libgamegraphics_la_SOURCES += tls-zone66.cpp
libgamegraphics_la_SOURCES += tls-zone66-map.cpp

EXTRA_libgamegraphics_la_SOURCES  = filter-block-pad.hpp
EXTRA_libgamegraphics_la_SOURCES += filter-ccomic.hpp
EXTRA_libgamegraphics_la_SOURCES += filter-ccomic2.hpp
EXTRA_libgamegraphics_la_SOURCES += image-from_tileset.hpp
EXTRA_libgamegraphics_la_SOURCES += image-sub.hpp
EXTRA_libgamegraphics_la_SOURCES += img-bash-sprite.hpp
EXTRA_libgamegraphics_la_SOURCES += img-ega.hpp
EXTRA_libgamegraphics_la_SOURCES += img-ega-backdrop.hpp
EXTRA_libgamegraphics_la_SOURCES += img-ega-byteplanar.hpp
EXTRA_libgamegraphics_la_SOURCES += img-ega-byteplanar-tiled.hpp
EXTRA_libgamegraphics_la_SOURCES += img-ega-linear.hpp
EXTRA_libgamegraphics_la_SOURCES += img-ega-planar.hpp
EXTRA_libgamegraphics_la_SOURCES += img-ega-rowplanar.hpp
EXTRA_libgamegraphics_la_SOURCES += img-mono.hpp
EXTRA_libgamegraphics_la_SOURCES += img-vga.hpp
EXTRA_libgamegraphics_la_SOURCES += img-vga-planar.hpp
EXTRA_libgamegraphics_la_SOURCES += img-vga-raw.hpp
EXTRA_libgamegraphics_la_SOURCES += img-vga-raw-planar.hpp
EXTRA_libgamegraphics_la_SOURCES += img-ccomic.hpp
EXTRA_libgamegraphics_la_SOURCES += img-ddave.hpp
EXTRA_libgamegraphics_la_SOURCES += img-nukem2.hpp
EXTRA_libgamegraphics_la_SOURCES += img-palette.hpp
EXTRA_libgamegraphics_la_SOURCES += img-pcx.hpp
EXTRA_libgamegraphics_la_SOURCES += img-pic-raptor.hpp
EXTRA_libgamegraphics_la_SOURCES += img-scr-vinyl.hpp
EXTRA_libgamegraphics_la_SOURCES += img-tv-fog.hpp
EXTRA_libgamegraphics_la_SOURCES += img-zone66_tile.hpp
EXTRA_libgamegraphics_la_SOURCES += pal-vga-raw.hpp
EXTRA_libgamegraphics_la_SOURCES += pal-gmf-harry.hpp
EXTRA_libgamegraphics_la_SOURCES += tileset-fat.hpp
EXTRA_libgamegraphics_la_SOURCES += tileset-fat-fixed_tile_size.hpp
EXTRA_libgamegraphics_la_SOURCES += tls-actrinfo.hpp
EXTRA_libgamegraphics_la_SOURCES += tls-bash.hpp
EXTRA_libgamegraphics_la_SOURCES += tls-bash-sprite.hpp
EXTRA_libgamegraphics_la_SOURCES += tls-catacomb.hpp
EXTRA_libgamegraphics_la_SOURCES += tls-ccaves-sub.hpp
EXTRA_libgamegraphics_la_SOURCES += tls-ccaves-main.hpp
EXTRA_libgamegraphics_la_SOURCES += tls-ccomic.hpp
EXTRA_libgamegraphics_la_SOURCES += tls-ccomic2.hpp
EXTRA_libgamegraphics_la_SOURCES += tls-cosmo.hpp
EXTRA_libgamegraphics_la_SOURCES += tls-ddave.hpp
EXTRA_libgamegraphics_la_SOURCES += tls-ega-apogee.hpp
EXTRA_libgamegraphics_la_SOURCES += tls-got.hpp
EXTRA_libgamegraphics_la_SOURCES += tls-harry-chr.hpp
EXTRA_libgamegraphics_la_SOURCES += tls-harry-hsb.hpp
EXTRA_libgamegraphics_la_SOURCES += tls-harry-ico.hpp
EXTRA_libgamegraphics_la_SOURCES += tls-hocus.hpp
EXTRA_libgamegraphics_la_SOURCES += tls-jill.hpp
EXTRA_libgamegraphics_la_SOURCES += tls-sagent.hpp
EXTRA_libgamegraphics_la_SOURCES += tls-stryker.hpp
EXTRA_libgamegraphics_la_SOURCES += tls-vinyl.hpp
EXTRA_libgamegraphics_la_SOURCES += tls-wacky.hpp
EXTRA_libgamegraphics_la_SOURCES += tls-wordresc.hpp
EXTRA_libgamegraphics_la_SOURCES += tls-zone66.hpp
EXTRA_libgamegraphics_la_SOURCES += tls-zone66-map.hpp

WARNINGS = -Wall -Wextra -Wno-unused-parameter

AM_CPPFLAGS  = -I $(top_srcdir)/include
AM_CPPFLAGS += $(libgamecommon_CPPFLAGS)
AM_CPPFLAGS += $(libgamearchive_CPPFLAGS)
AM_CPPFLAGS += $(WARNINGS)

AM_CXXFLAGS  = $(DEBUG_CXXFLAGS)
AM_CXXFLAGS += $(libgamecommon_CFLAGS)
AM_CXXFLAGS += $(libgamearchive_CFLAGS)

libgamegraphics_la_LDFLAGS  = $(AM_LDFLAGS)
libgamegraphics_la_LDFLAGS += -version-info 2:0:0

libgamegraphics_la_LIBADD  = $(libgamecommon_LIBS)
libgamegraphics_la_LIBADD += $(libgamearchive_LIBS)
