library_includedir = $(includedir)/@camoto_release@/camoto/
nobase_library_include_HEADERS = gamegraphics.hpp
nobase_library_include_HEADERS += gamegraphics/graphics.hpp
nobase_library_include_HEADERS += gamegraphics/graphicstype.hpp
nobase_library_include_HEADERS += gamegraphics/imageconverter.hpp
nobase_library_include_HEADERS += gamegraphics/manager.hpp
nobase_library_include_HEADERS += gamegraphics/palette.hpp
