library_includedir = $(includedir)/@camoto_release@/camoto/
nobase_library_include_HEADERS = gamegraphics.hpp
nobase_library_include_HEADERS += gamegraphics/tileset.hpp
nobase_library_include_HEADERS += gamegraphics/tilesettype.hpp
nobase_library_include_HEADERS += gamegraphics/image.hpp
nobase_library_include_HEADERS += gamegraphics/imagetype.hpp
nobase_library_include_HEADERS += gamegraphics/manager.hpp
nobase_library_include_HEADERS += gamegraphics/palettetable.hpp
