library_includedir = $(includedir)/@camoto_release@/camoto/
nobase_library_include_HEADERS = gamegraphics.hpp
nobase_library_include_HEADERS += gamegraphics/image.hpp
nobase_library_include_HEADERS += gamegraphics/imagetype.hpp
nobase_library_include_HEADERS += gamegraphics/image-memory.hpp
nobase_library_include_HEADERS += gamegraphics/manager.hpp
nobase_library_include_HEADERS += gamegraphics/palette.hpp
nobase_library_include_HEADERS += gamegraphics/tileset.hpp
nobase_library_include_HEADERS += gamegraphics/tilesettype.hpp
nobase_library_include_HEADERS += gamegraphics/tileset-from_image_list.hpp
nobase_library_include_HEADERS += gamegraphics/util.hpp
